--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,8 +69,9 @@ jobs:
 
   acceptance-testing:
     docker:
-      - image: google/cloud-sdk:198.0.0
+      - image: google/cloud-sdk:198.0.0-alpine
     steps:
+      - checkout
       - run: make deploy
 
   deploy:
