feat: deploy only in master.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,3 +93,6 @@ workflows:
       - deploy:
           requires:
             - acceptance-testing
+          filters:
+            branches:
+              only: master
