--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,9 @@ workflows:
     jobs:
       - build
       - acceptance-testing:
+          requires:
+            - build
+      - approved:
           type: approval
           requires:
             - build
