feat: require approved before deploy.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,6 +96,7 @@ workflows:
       - deploy:
           requires:
             - acceptance-testing
+            - approved
           filters:
             branches:
               only: master
