--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           name: Install dep
           command: |
             DEP_VERSION=0.4.1
-            curl -L -s https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-amd64 -o $GOPATH/bin/dep
+            curl -L -s https://github.com/golang/dep/releases/download/v${DEP_VERSION}/dep-linux-amd64 -o ${GOPATH}/bin/dep
             chmod +x $GOPATH/bin/dep
       - restore_cache:
           keys:
@@ -27,7 +27,7 @@ jobs:
           name: make install
           command: |
             make install
-            if [[ $CIRCLE_BRANCH != "master" ]]; then
+            if [[ ${CIRCLE_BRANCH} != "master" ]]; then
               if [[ $(git status --porcelain) ]]; then
                 git add --all
                 git commit -m "BOT: Make install"
@@ -41,7 +41,7 @@ jobs:
       - run:
           name: make format
           command: |
-            if [[ $CIRCLE_BRANCH != "master" ]]; then
+            if [[ ${CIRCLE_BRANCH} != "master" ]]; then
               make format
               if [[ $(git status --porcelain) ]]; then
                 git add --all
@@ -57,7 +57,7 @@ jobs:
           name: Push changes
           command: |
             if [[ $CIRCLE_BRANCH != "master" ]]; then
-              if [[ $(git log origin/$CIRCLE_BRANCH..$CIRCLE_BRANCH) ]]; then
+              if [[ $(git log origin/${CIRCLE_BRANCH}..${CIRCLE_BRANCH}) ]]; then
                 echo "Pushing autobot fixes"
                 git push --set-upstream pushback $CIRCLE_BRANCH
                 exit 1
@@ -73,7 +73,14 @@ jobs:
     working_directory: /cd-pipeline-poc
     steps:
       - checkout
-      - run: scripts/deploy.sh
+      - run:
+          name: Get unified namespace
+          command: |
+            UNIFIED_BRANCH=`echo ${CIRCLE_BRANCH} | sed 's/\//-/g' | sed 's/_/-/g' | sed 's/\./-/g' | awk '{print tolower($0)}'`
+            NAMESPACE=${UNIFIED_BRANCH}-${CIRCLE_PR_NUMBER}
+      - run:
+          name: Staging deployment
+          command: scripts/deploy.sh ${NAMESPACE}
 
   deploy:
     docker:
@@ -81,7 +88,7 @@ jobs:
     working_directory: /cd-pipeline-poc
     steps:
       - checkout
-      - run: scripts/deploy.sh
+      - run: scripts/deploy.sh "production"
 
 workflows:
   version: 2
