--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
           name: Install envsubst
           command: |
             if [[ $(envsubst -V) != 0 ]]; then
-              apk add gettext libintl envsubst
+              apk update && apk --no-cache add gettext libintl envsubst
             fi
       - run:
           name: Staging deployment
