--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,11 @@ jobs:
           name: Install envsubst
           command: |
             if [[ $(envsubst -V) != 0 ]]; then
-              apk update && apk --no-cache add gettext libintl envsubst
+              set -x
+              apk add --update libintl
+              apk add --virtual build_deps gettext
+              cp /usr/bin/envsubst /usr/local/bin/envsubst
+              apk del build_deps
             fi
       - run:
           name: Staging deployment
