--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,13 @@ jobs:
             - vendor
       - run: make setup
       - run:
+          name: Install npm
+          command: |
+            if [[ $(npm -v) != 0 ]]; then
+              curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
+            fi
+            nvm install
+      - run:
           name: make format
           command: |
             if [[ ${CIRCLE_BRANCH} != "master" ]]; then
