--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
             if [[ $(npm -v) != 0 ]]; then
               curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
             fi
+            bash ~/.bashrc
             nvm install
       - run:
           name: make format
