--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
             if [[ $(npm -v) != 0 ]]; then
               curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
             fi
+            pwd
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
             nvm install
