fix: install nvm alternatively.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,11 +41,12 @@ jobs:
       - run:
           name: Install npm
           command: |
-            if [[ $(npm -v) != 0 ]]; then
-              curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.33.11/install.sh | bash
-            fi
             export NVM_DIR="$HOME/.nvm"
+            git clone https://github.com/creationix/nvm.git "$NVM_DIR"
+            cd "$NVM_DIR"
+            git checkout `git describe --abbrev=0 --tags --match "v[0-9]*" $(git rev-list --tags --max-count=1)`
             \. "$NVM_DIR/nvm.sh"
+            cd /go/src/github.com/anhpham1509/cd-pipeline-poc
             nvm install
       - run:
           name: make format
