--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
             \. "$NVM_DIR/nvm.sh"
             cd /go/src/github.com/anhpham1509/cd-pipeline-poc
             nvm install
-            echo "export NVM_DIR="$HOME/.nvm"\n[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"" >> ${BASH_ENV}
+            echo "export NVM_DIR="$HOME/.nvm"\n\. "$NVM_DIR/nvm.sh"" >> ${BASH_ENV}
       - run:
           name: make format
           command: |
